Fix visiblity of svg icons in nav dropdowns (#884)

--- a/scss/grouparoo.scss
+++ b/scss/grouparoo.scss
@@ -257,7 +257,8 @@ a,
   .dropdown-menu {
     background-color: #fff;
     .nav-link,
-    .dropdown-header {
+    .dropdown-header,
+    .dropdown-header * {
       color: $grouparoo-font-color !important;
     }
   }
